--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <title>Jobbook App | A Social Media Jobboard App for everyone</title>
-  <style>
+  <!-- <style>
     html {
       height: 100%;
       width: 100%;
@@ -35,10 +35,10 @@
       min-height: 100%;
       width: 100%
     }
-  </style>
+  </style> -->
 </head>
 
-<body style="background-color: #0073B1;">
+<body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
@@ -53,6 +53,8 @@
     -->
 </body>
 <script src="//js.pusher.com/4.0/pusher.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/simple-peer/9.11.1/simplepeer.min.js" integrity="sha512-0f7Ahsuvr+/P2btTY4mZIw9Vl23lS6LY/Y7amdkmUg2dqsUF+cTe4QjWvj/NIBHJoGksOiqndKQuI9yzn2hB0g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/simple-peer/9.11.1/simplepeer.min.js"
+  integrity="sha512-0f7Ahsuvr+/P2btTY4mZIw9Vl23lS6LY/Y7amdkmUg2dqsUF+cTe4QjWvj/NIBHJoGksOiqndKQuI9yzn2hB0g=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 </html>
